# haiku

./: README.md  pyproject.toml  sample.env
haiku_generator/: main.py
haiku_generator/ui/: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.js
haiku_generator/ui/src/: Main.elm
tests/: test_haiku_generator.py
